# Task-and-Project-Management-SaaS

./: .env.example  .gitignore  README.md  docker-compose.yml  run.sh  verify_email_invite.py  verify_permissions.py
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AuthGuards.tsx  CreateProjectModal.tsx  PermissionGate.tsx
frontend/src/hooks/: usePermissions.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  RegisterPage.tsx
frontend/src/types/: rbac.ts
scripts/: generate_keys.py  init-databases.sql
services/api_gateway/: Dockerfile  requirements.txt
services/api_gateway/app/: main.py
services/auth_service/: Dockerfile  auth_service_doc.md  requirements.txt
services/auth_service/app/: config.py  dependencies.py  main.py
services/file_service/: Dockerfile  requirements.txt
services/file_service/app/: main.py
services/notification_service/: Dockerfile  requirements.txt
services/notification_service/app/: config.py  main.py
services/org_service/: Dockerfile  org_service_doc.md  requirements.txt
services/org_service/app/: config.py  dependencies.py  main.py  permissions.py
services/project_service/: Dockerfile  project_service_doc.md
services/task_service/: Dockerfile
shared/: pyproject.toml
shared/shared/: __init__.py  config.py  middleware.py
shared/shared/auth/: __init__.py  rbac.py
shared/shared/database/: __init__.py
shared/shared/events/: __init__.py  consumer.py  producer.py
shared/shared/models/: __init__.py
(+28 files in other folders)
