[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "taskpm-shared"
version = "0.1.0"
description = "Shared library for Task PM microservices"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "python-jose[cryptography]>=3.3,<4",
    "aiokafka>=0.10,<1",
    "redis[hiredis]>=5.0,<6",
    "passlib[bcrypt]>=1.7,<2",
    "httpx>=0.26,<1",
]

[tool.setuptools.packages.find]
where = ["."]
